# TFG-Optimizacion-Residuos

./: .gitignore  requirements.txt
data/processed/: buildings_1000m.geojson  buildings_250m.geojson  buildings_300m.geojson  buildings_350m.geojson  buildings_400m.geojson  buildings_450m.geojson  buildings_500m.geojson  buildings_550m.geojson  buildings_600m.geojson  buildings_650m.geojson  buildings_700m.geojson  buildings_750m.geojson  buildings_800m.geojson  buildings_850m.geojson  buildings_900m.geojson  buildings_950m.geojson  graph_1000m.graphml  graph_1100m.graphml  graph_1250m.graphml  graph_1500m.graphml  graph_250m.graphml  graph_300m.graphml  graph_350m.graphml  graph_400m.graphml  graph_450m.graphml  graph_500m.graphml  graph_550m.graphml  graph_600m.graphml  graph_650m.graphml  graph_700m.graphml  graph_750m.graphml  graph_800m.graphml  graph_850m.graphml  graph_900m.graphml  graph_950m.graphml  instancia_laguna.json  instancia_laguna_1000m.json  instancia_laguna_1250m.json  instancia_laguna_1500m.json  instancia_laguna_250m.json  (+12 more)
notebooks/: 00_generacion.ipynb  01_preparacion_datos_laguna.ipynb  01_validacion_instancias.ipynb  02_modelo_exacto.ipynb  02_relajacion_lagrangiana.ipynb  03_relajacion_lagrangiana.ipynb  04_metaheuristica_tabu.ipynb  REFACTOR_PLAN.md
notebooks/anterior/: 01_preparacion_datos_laguna.ipynb  02_modelo_exacto.ipynb
output/: log_250m.txt  log_400bm.txt  log_400m.txt  log_450m.txt  log_500m.txt  log_550m.txt  log_700m.txt  log_750m.txt  log_800m.txt  salidas.txt  solucion_exacta.pkl  solucion_exacta_resumen.json
output/exacto_1000m/: solucion_exacta.json  solucion_exacta.pkl  solucion_exacta_resumen.json
output/exacto_1500m/: solucion_exacta.json  solucion_exacta.pkl  (+1 more)
scripts/: barrido_instancias.py  migrar_pickle_a_json.py
src/metaheuristica/: CMakeLists.txt  README.md  prueba  prueba_debug
src/metaheuristica/include/tabu/: constructive.hpp  instancia.hpp  io.hpp  movimientos.hpp  oracle.hpp  solution.hpp  tabu.hpp
src/metaheuristica/output/greedy/: solucion_greedy_1500m.json
src/metaheuristica/output/metaheuristica/: solucion_tabu_pertipo_250m.json
src/metaheuristica/src/: constructive.cpp  instancia.cpp  io.cpp  main.cpp  movimientos.cpp  oracle.cpp  solution.cpp  tabu.cpp
tests/: test_lagrangiana.py  test_metricas.py  verificar_comparativas.py  verificar_demanda.py  verificar_geo.py  verificar_mapas.py  verificar_metricas.py  verificar_metricas_instancia.py  verificar_refactor.py  verificar_refactor_baseline.json  verificar_tabla_instancias.py
(+128 files in other folders)
